--- a/src/components/proyectos/estilo.css
+++ b/src/components/proyectos/estilo.css
@@ -1,12 +1,21 @@
+body{
+    background-color: white;
+}
+#banner{
+    width: 100%;
+    height: 80%;
+    border-radius: 50px;
+}
+
 #imgs_proyecto{
     display: block;
     margin: auto;
    
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 80%;
+    box-shadow: 5px -5px 5px cornflowerblue ;
 
    
-    border-radius: 10px;
 }
 #icon{
     width: 30px;
@@ -24,4 +33,25 @@ a{
     width: 200px;
     height: 200px;
     border-radius: 100px;
+}
+#descripcion{
+   display: flex;
+   justify-content: center;
+}
+#box{
+    display: inline-block;
+    text-align: center;
+    
+}
+#code{
+    display: flex;
+    justify-content: center;
+}
+#wasap{
+    
+    width: 60px;
+    height: 60px;
+}
+#cw{
+    margin-left: 80%;
 }
